# blatt-7-aufgabe-1-_-1

./: .travis.yml  AVLTree.cpp  AVLTree.h  CMakeLists.txt  README.md
test/: CMakeLists.txt  TestTree.cpp  TestTree.h
